--- a/src/main/webapp/demo2/dom.html
+++ b/src/main/webapp/demo2/dom.html
@@ -6,14 +6,28 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-
+        <!--<link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">-->
+        <!--<link type="text/css" rel="styleSheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" />-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/jsplumbtoolkit-defaults.css">
         <link rel="stylesheet" href="../css/main_jsplumb.css">
         <link rel="stylesheet" href="../css/jsplumbtoolkit-demo.css">
         <link rel="stylesheet" href="demo.css">
     </head>
     <body data-demo-id="perimeterAnchors">
+
+        <div class="col-md-6 col-md-offset-3">
+            <div class="input-group has-feedback">
+                <span class="input-group-addon" style="background-color: white;"><span
+                    class="glyphicon glyphicon-search"></span></span>
+                <input type="text" class="form-control" id="commitUrl" name="commit_url"
+                       placeholder="enter your commit url" style="width: 600px;">
+                <span class="input-group-btn">
+                    <button id="searchButton" class="btn btn-info" type="button" onclick="startGraph()" style="color: #FFFFFF !important">View Graph</button>
+                </span>
+            </div>
+        </div>
+        <div class="col-md-12">
         <div class="jtk-demo-main">
             <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">
                 <div class="shape" data-shape="Rec_Def" id="test1"></div>
@@ -21,13 +35,15 @@
                 <div class="shape" data-shape="Rec_Use2" id="test4"></div>
             </div>
         </div>
+        </div>
 
         <!-- JS -->
-        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
-        <script src="../js/jquery-1.9.0-min.js"></script>
-        <script src="../js/jsplumb.js"></script>
-        <!--<script src="../js/jsplumbtoolkit.js"></script>-->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="../js/jsplumb.js"></script>
 		<script src="demo.js"></script>
 
 
