--- a/src/main/webapp/try1/index.html
+++ b/src/main/webapp/try1/index.html
@@ -30,377 +30,386 @@
 	<div class="dropdownDIV">
 
 	</div>
-	<svg width="1800" height="1800" style="border:1px solid black"></svg>
+	<svg width="1800" height="2200" style="border:1px solid black"></svg>
 
 	<script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
 	<script src="https://d3js.org/d3-selection-multi.v1.js"></script>
 
 	<script>
-		$.getJSON("localhost:8080/try1/getfilelist", function(data) {
-			console.log(data);
-		});
+		$.getJSON("../getfilelist", function(filelist) {
+			var biktest = filelist;
+			console.log(biktest);
 
-		$.post("../getjson", {
-			file_name: "graph.json"
-		}, function(data) {
-			console.log(data);
-		});
-		
-		var jsonlist = ["graph.json", "graph1.json"];// = $getjson
-		var dataIndex = jsonlist[0]  // = $post file name[jsonlist[0]] from d3.json
-
-		var colors = d3.scaleOrdinal(d3.schemeCategory10);
-		var svg = d3.select("svg")
-		var width = +svg.attr("width"),
-			height = +svg.attr("height"),
-			node,
-			link,
-			labelPadding = 3;
+			var jsonlist = biktest; // = $getjson
+//			var jsonlist = ["graph11.json", "graph22.json"]
+			var dataIndex = jsonlist[0] // = $post file name[jsonlist[0]] from d3.json
 
 
 
-		d3.select(".dropdownDIV")
-			.append("select")
-			.attr("id", "dropdown")
-			.selectAll("option")
-			.data(jsonlist)
-			.enter().append("option")
-			.text(function(d) {
-				return d;
-			})
-			.attr("value", function(d) {
-				return d;
-			});
-		d3.select("#dropdown")
-			.on("change", function(d) {
-				dataIndex = this.value;
-				svg.selectAll("*").remove();
-				d3.select("#chart1").remove();
-
-				update(dataIndex);
-			})
+			var colors = d3.scaleOrdinal(d3.schemeCategory10);
+			var svg = d3.select("svg")
+			var width = +svg.attr("width"),
+				height = +svg.attr("height"),
+				node,
+				link,
+				labelPadding = 3;
 
 
 
-		function update(dataIndex) {
+			d3.select(".dropdownDIV")
+				.append("select")
+				.attr("id", "dropdown")
+				.selectAll("option")
+				.data(jsonlist)
+				.enter().append("option")
+				.text(function(d) {
+					return d;
+				})
+				.attr("value", function(d) {
+					return d;
+				});
+			d3.select("#dropdown")
+				.on("change", function(d) {
+					dataIndex = this.value;
+					svg.selectAll("*").remove();
+					d3.select("#chart1").remove();
 
-			var simulation = d3.forceSimulation()
-				.force("link", d3.forceLink().id(function(d) {
-					return d.id;
-				}))
-				.force("charge", d3.forceManyBody()
-					.strength(function(d) {
-						return +500;
-					}))
-				.force('collide', d3.forceCollide(230).strength(1.5).iterations(3))
-				.force("center", d3.forceCenter(900, 920));
-
-			d3.json(dataIndex, function(error, graph) {
-				if (error) throw error;
-				update(graph.links, graph.nodes);
-
-				function update(links, nodes) {
-					link = svg.selectAll("g")
-						.data(graph.links)
-						.enter().append("line")
-						.attr("class", function(d) {
-							return "link " + d.type;
-						})
-						.style("opacity", "0.7")
-						.attr("marker-end", function(d) {
-							return "url(#" + d.type + ")";
-						});
-
-					//			link.append("title")
-					//				.text(function(d) {
-					//					return d.type;
-					//				});
-
-
-
-					node = svg.selectAll(".node")
-						.data(graph.nodes)
-						.enter()
-						.append("g")
-						.attr("class", "nodes");
-
-					node.append("rect").attr("class", "rect")
-						.attr("x", -165)
-						.attr("y", -76)
-						.attr("width", 14)
-						.attr("height", 126)
-						.style("fill", function(d) {
-							return colors(d.file_name);
-						})
-						.call(d3.drag()
-							.on("start", dragstarted)
-							.on("drag", dragged)
-							.on("end", dragended))
-						.on("dblclick", connectedNodes);
-
-					node.append("rect").attr("class", "rect")
-						.attr("x", -165)
-						.attr("y", -76)
-						.attr("width", 316)
-						.attr("height", 126)
-						.style("fill", "none")
-						.style("stroke", "black");
-					node.append("title")
-						.attr("class", "nodetitle")
-						.text(function(d) {
-							return /[^/]*$/.exec(d.file_name)[0];
-						})
-						.style("font-color", function(d) {
-							return colors(d.file_name);
-						});
-					node.append("text")
-						.attr("class", "nodetext")
-						.attr("x", -145)
-						.attr("y", -62)
-						.style("font-weight", 600)
-						.text(function(d) {
-							return d.desc;
-						});
-
-					node.append("foreignObject")
-						.attr("width", 320)
-						.attr("height", 120)
-						.attr("x", -150)
-						.attr("y", -58)
-						.attr("id", "textarea")
-						.on("click", getname)
-						.append("xhtml:body")
-						.append('textarea')
-						.attr("id", function(d) {
-							return "node" + d.id;
-						})
-						.text(function(d) {
-							return d.code;
-						});
-
-					var node_length = node._groups[0].length;
-					//				console.log(node_length);
-
-					for (i = 0; i < node_length; i++) {
-						var bik = (i);
-						//					console.dir(typeof("node" + bik));
-						//					console.log("node" + bik)
-						var myTextArea = document.getElementById("node" + bik);
-						var editor1 = CodeMirror.fromTextArea(myTextArea, {
-							lineNumbers: true,
-							mode: "text/x-java",
-							theme: 'default',
-							scrollbarStyle: "simple",
-
-						});
-					}
-
-					edgepaths = svg.selectAll(".edgepath")
-						.data(graph.links)
-						.enter()
-						.append('path')
-						.attrs({
-							'class': 'edgepath',
-							'fill-opacity': 0.1,
-							'stroke-opacity': 0.9,
-							'id': function(d, i) {
-								return 'edgepath' + i
-							}
-						})
-						.style("pointer-events", "none");
-
-					edgelabels = svg.selectAll(".edgelabel")
-						.data(graph.links)
-						.enter().append('text')
-						.style("pointer-events", "none")
-						.attrs({
-							'class': 'edgelabel',
-							'id': function(d, i) {
-								return 'edgelabel' + d.type
-							},
-						});
-
-
-					edgelabels.append("textPath")
-						.attr('xlink:href', function(d, i) {
-							return '#edgepath' + i
-						})
-						.style("text-anchor", "middle")
-						.style("pointer-events", "none")
-						.attr("startOffset", "50%")
-						.text(function(d) {
-							return d.text;
-						});
-
-
-
-					svg.append('defs').selectAll('marker')
-						.data(["Type57", "Type56", "Type58"])
-						.enter().append("marker")
-						.attrs({
-							'id': function(d) {
-								return d;
-							},
-							'viewBox': '-0 -5 10 10',
-							'refX': 100,
-							'refY': 0,
-							'orient': 'auto',
-							'markerWidth': 7,
-							'markerHeight': 7,
-							'xoverflow': 'visible'
-						})
-						.append('path')
-						.attr('d', 'M 0,-5 L 10 ,0 L 0,5');
-
-					simulation
-						.nodes(nodes)
-						.on("tick", ticked);
-
-					simulation.force("link")
-						.links(links)
-						.distance([400]);
-				}
-
-				//				var div = document.createElement("div");
-				//				div.setAttribute('id', 'chart1');
-				//				document.getElementById("chart").appendChild('div');
-				//				
-				var div = document.createElement("div");
-				div.setAttribute('id', 'chart1');
-				document.getElementById("chart").appendChild(div);
-
-				var div = document.createElement("textarea");
-				div.setAttribute('id', 'graph1');
-				document.getElementById("chart1").appendChild(div);
-
-				var myTextArea = document.getElementById("graph1");
-				var editor = CodeMirror.fromTextArea(myTextArea, {
-					height: "500px",
-					width: "200px",
-					lineNumbers: true,
-					//						mode: "text/x-java",
-					mode: "text/x-diff",
-					theme: 'default',
-					scrollbarStyle: "simple",
-					matchBrackets: true
+					update(dataIndex);
 				})
 
-				//					.setValue("your code here");
-				editor.setSize(650, 200);
-				editor.getDoc().setValue("+ Hover over code to view it here!!!\n- You can also check for diff!!!");
+
+
+			function update(dataIndex) {
+
+				var simulation = d3.forceSimulation()
+					.force("link", d3.forceLink().id(function(d) {
+						return d.id;
+					}))
+					.force("charge", d3.forceManyBody()
+						.strength(function(d) {
+							return +500;
+						}))
+					.force('collide', d3.forceCollide(230).strength(1.5).iterations(3))
+					.force("center", d3.forceCenter(900, 920));
+
+				$.post("../getjson", {
+					file_name: dataIndex
+				}, function(graph) {
+					console.log(graph)
+					console.log(graph.links);
+					console.log(graph.nodes);
+//				});
+
+//				d3.json(dataIndex, function(error, graph) {
+//					if (error) throw error;
+//					console.log(graph);
+//					console.log(graph.links);
+//					console.log(graph.nodes);
+					update(graph.links, graph.nodes);
+
+					function update(links, nodes) {
+						link = svg.selectAll("g")
+							.data(graph.links)
+							.enter().append("line")
+							.attr("class", function(d) {
+								return "link " + d.type;
+							})
+							.style("opacity", "0.7")
+							.attr("marker-end", function(d) {
+								return "url(#Type" + d.type + ")";
+							});
+
+						//			link.append("title")
+						//				.text(function(d) {
+						//					return d.type;
+						//				});
 
 
 
-				function ticked() {
-					link
-						.attr("x1", function(d) {
-							return d.source.x;
-						})
-						.attr("y1", function(d) {
-							return d.source.y;
-						})
-						.attr("x2", function(d) {
-							return d.target.x;
-						})
-						.attr("y2", function(d) {
-							return d.target.y;
-						});
-					node
-						.attr("transform", function(d) {
-							return "translate(" + Math.max(170, Math.min(width - 160, d.x)) + "," + Math.max(80, Math.min(height - 70, d.y)) + ")";
-						});
+						node = svg.selectAll(".node")
+							.data(graph.nodes)
+							.enter()
+							.append("g")
+							.attr("class", "nodes");
 
-					edgepaths.attr('d', function(d) {
-						return 'M ' + d.source.x + ' ' + d.source.y + ' L ' + d.target.x + ' ' + d.target.y;
-					});
+						node.append("rect").attr("class", "rect")
+							.attr("x", -165)
+							.attr("y", -76)
+							.attr("width", 14)
+							.attr("height", 126)
+							.style("fill", function(d) {
+								return colors(d.file_name);
+							})
+							.call(d3.drag()
+								.on("start", dragstarted)
+								.on("drag", dragged)
+								.on("end", dragended))
+							.on("dblclick", connectedNodes);
 
-					edgelabels.attr('transform', function(d) {
+						node.append("rect").attr("class", "rect")
+							.attr("x", -165)
+							.attr("y", -76)
+							.attr("width", 316)
+							.attr("height", 126)
+							.style("fill", "none")
+							.style("stroke", "black");
+						node.append("title")
+							.attr("class", "nodetitle")
+							.text(function(d) {
+								return /[^/]*$/.exec(d.file_name)[0];
+							})
+							.style("font-color", function(d) {
+								return colors(d.file_name);
+							});
+						node.append("text")
+							.attr("class", "nodetext")
+							.attr("x", -145)
+							.attr("y", -62)
+							.style("font-weight", 600)
+							.text(function(d) {
+								return d.desc;
+							});
 
-						var bbox = this.getBBox();
+						node.append("foreignObject")
+							.attr("width", 320)
+							.attr("height", 120)
+							.attr("x", -150)
+							.attr("y", -58)
+							.attr("id", "textarea")
+							.on("click", getname)
+							.append("xhtml:body")
+							.append('textarea')
+							.attr("id", function(d) {
+								return "node" + d.id;
+							})
+							.text(function(d) {
+								return d.code;
+							});
 
-						rx = bbox.x + bbox.width / 2;
-						ry = bbox.y + bbox.height / 2;
-						return 'rotate(92 ' + rx + ' ' + ry + ')';
+						var node_length = node._groups[0].length;
+						//				console.log(node_length);
 
-					});
-				}
+						for (i = 0; i < node_length; i++) {
+							var bik = (i);
+							//					console.dir(typeof("node" + bik));
+							//					console.log("node" + bik)
+							var myTextArea = document.getElementById("node" + bik);
+							var editor1 = CodeMirror.fromTextArea(myTextArea, {
+								lineNumbers: true,
+								mode: "text/x-java",
+								theme: 'default',
+								scrollbarStyle: "simple",
 
-				function dragstarted(d) {
-					if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-					d.fx = d.x;
-					d.fy = d.y;
-				}
+							});
+						}
 
-				function dragged(d) {
-					d.fx = d3.event.x;
-					d.fy = d3.event.y;
-				}
+						edgepaths = svg.selectAll(".edgepath")
+							.data(graph.links)
+							.enter()
+							.append('path')
+							.attrs({
+								'class': 'edgepath',
+								'fill-opacity': 0.1,
+								'stroke-opacity': 0.9,
+								'id': function(d, i) {
+									return 'edgepath' + i
+								}
+							})
+							.style("pointer-events", "none");
 
-				function dragended(d) {
-					if (!d3.event.active)
-						simulation.alphaTarget(0.3).stop();
-					d.fx = null;
-					d.fy = null;
-				}
-
-				function getname() {
-					var bikesh = (this.__data__);
-					var bikesh1 = ((bikesh.code));
-					console.log((bikesh1));
-					editor.getDoc().setValue(bikesh1);
-				}
-
-				//Toggle stores whether the highlighting is on
-				var toggle = 0;
-
-				//Create an array logging what is connected to what
-				var linkedByIndex = {};
-				for (i = 0; i < graph.nodes.length; i++) {
-					linkedByIndex[i + "," + i] = 1;
-				};
-				graph.links.forEach(function(d) {
-					linkedByIndex[d.source.index + "," + d.target.index] = 1;
-				});
-
-				//This function looks up whether a pair are neighbours  
-				function neighboring(a, b) {
-					return linkedByIndex[a.index + "," + b.index];
-				}
-
-				function connectedNodes() {
-
-					if (toggle == 0) {
-						//Reduce the opacity of all but the neighbouring nodes
-						d = d3.select(this).node().__data__;
-						node.style("opacity", function(o) {
-							return neighboring(d, o) | neighboring(o, d) ? 1 : 0.2;
-						});
-
-						link.style("opacity", function(o) {
-							return d.index == o.source.index | d.index == o.target.index ? 0.5 : 0.1;
-						});
-
-						edgelabels.style("opacity", function(o) {
-							return d.index == o.source.index | d.index == o.target.index ? 1 : 0.1;
-						});
+						edgelabels = svg.selectAll(".edgelabel")
+							.data(graph.links)
+							.enter().append('text')
+							.style("pointer-events", "none")
+							.attrs({
+								'class': 'edgelabel',
+								'id': function(d, i) {
+									return 'edgelabelType' + d.type
+								},
+							});
 
 
-						//Reduce the op
+						edgelabels.append("textPath")
+							.attr('xlink:href', function(d, i) {
+								return '#edgepath' + i
+							})
+							.style("text-anchor", "middle")
+							.style("pointer-events", "none")
+							.attr("startOffset", "50%")
+							.text(function(d) {
+								return d.text;
+							});
 
-						toggle = 1;
-					} else {
-						//Put them back to opacity=1
-						node.style("opacity", 1);
-						link.style("opacity", 0.5);
-						edgelabels.style("opacity", 1);
-						toggle = 0;
+
+
+						svg.append('defs').selectAll('marker')
+							.data(["Type57", "Type56", "Type58"])
+							.enter().append("marker")
+							.attrs({
+								'id': function(d) {
+									return d;
+								},
+								'viewBox': '-0 -5 10 10',
+								'refX': 100,
+								'refY': 0,
+								'orient': 'auto',
+								'markerWidth': 7,
+								'markerHeight': 7,
+								'xoverflow': 'visible'
+							})
+							.append('path')
+							.attr('d', 'M 0,-5 L 10 ,0 L 0,5');
+
+						simulation
+							.nodes(nodes)
+							.on("tick", ticked);
+
+						simulation.force("link")
+							.links(links)
+							.distance([400]);
 					}
 
-				}
+					//				var div = document.createElement("div");
+					//				div.setAttribute('id', 'chart1');
+					//				document.getElementById("chart").appendChild('div');
+					//				
+					var div = document.createElement("div");
+					div.setAttribute('id', 'chart1');
+					document.getElementById("chart").appendChild(div);
 
-			});
-		}
-		update(dataIndex);
+					var div = document.createElement("textarea");
+					div.setAttribute('id', 'graph1');
+					document.getElementById("chart1").appendChild(div);
+
+					var myTextArea = document.getElementById("graph1");
+					var editor = CodeMirror.fromTextArea(myTextArea, {
+						height: "500px",
+						width: "200px",
+						lineNumbers: true,
+						//						mode: "text/x-java",
+						mode: "text/x-diff",
+						theme: 'default',
+						scrollbarStyle: "simple",
+						matchBrackets: true
+					})
+
+					//					.setValue("your code here");
+					editor.setSize(650, 200);
+					editor.getDoc().setValue("+ Hover over code to view it here!!!\n- You can also check for diff!!!");
+
+
+
+					function ticked() {
+						link
+							.attr("x1", function(d) {
+								return d.source.x;
+							})
+							.attr("y1", function(d) {
+								return d.source.y;
+							})
+							.attr("x2", function(d) {
+								return d.target.x;
+							})
+							.attr("y2", function(d) {
+								return d.target.y;
+							});
+						node
+							.attr("transform", function(d) {
+								return "translate(" + Math.max(170, Math.min(width - 160, d.x)) + "," + Math.max(80, Math.min(height - 70, d.y)) + ")";
+							});
+
+						edgepaths.attr('d', function(d) {
+							return 'M ' + d.source.x + ' ' + d.source.y + ' L ' + d.target.x + ' ' + d.target.y;
+						});
+
+						edgelabels.attr('transform', function(d) {
+
+							var bbox = this.getBBox();
+
+							rx = bbox.x + bbox.width / 2;
+							ry = bbox.y + bbox.height / 2;
+							return 'rotate(92 ' + rx + ' ' + ry + ')';
+
+						});
+					}
+
+					function dragstarted(d) {
+						if (!d3.event.active) simulation.alphaTarget(0.3).restart();
+						d.fx = d.x;
+						d.fy = d.y;
+					}
+
+					function dragged(d) {
+						d.fx = d3.event.x;
+						d.fy = d3.event.y;
+					}
+
+					function dragended(d) {
+						if (!d3.event.active)
+							simulation.alphaTarget(0.3).stop();
+						d.fx = null;
+						d.fy = null;
+					}
+
+					function getname() {
+						var bikesh = (this.__data__);
+						var bikesh1 = ((bikesh.code));
+						console.log((bikesh1));
+						editor.getDoc().setValue(bikesh1);
+					}
+
+					//Toggle stores whether the highlighting is on
+					var toggle = 0;
+
+					//Create an array logging what is connected to what
+					var linkedByIndex = {};
+					for (i = 0; i < graph.nodes.length; i++) {
+						linkedByIndex[i + "," + i] = 1;
+					};
+					graph.links.forEach(function(d) {
+						linkedByIndex[d.source.index + "," + d.target.index] = 1;
+					});
+
+					//This function looks up whether a pair are neighbours  
+					function neighboring(a, b) {
+						return linkedByIndex[a.index + "," + b.index];
+					}
+
+					function connectedNodes() {
+
+						if (toggle == 0) {
+							//Reduce the opacity of all but the neighbouring nodes
+							d = d3.select(this).node().__data__;
+							node.style("opacity", function(o) {
+								return neighboring(d, o) | neighboring(o, d) ? 1 : 0.2;
+							});
+
+							link.style("opacity", function(o) {
+								return d.index == o.source.index | d.index == o.target.index ? 0.5 : 0.1;
+							});
+
+							edgelabels.style("opacity", function(o) {
+								return d.index == o.source.index | d.index == o.target.index ? 1 : 0.1;
+							});
+
+
+							//Reduce the op
+
+							toggle = 1;
+						} else {
+							//Put them back to opacity=1
+							node.style("opacity", 1);
+							link.style("opacity", 0.5);
+							edgelabels.style("opacity", 1);
+							toggle = 0;
+						}
+
+					}
+
+				});
+			}
+			update(dataIndex);
+		});
 
 	</script>
 	<div id="chart">
