--- a/src/main/webapp/try1/indexoffline.html
+++ b/src/main/webapp/try1/indexoffline.html
@@ -30,13 +30,13 @@
 	<div class="dropdownDIV">
 
 	</div>
-	<svg width="1800" height="1800" style="border:1px solid black"></svg>
+	<svg width="1800" height="2200" style="border:1px solid black"></svg>
 
 	<script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
 	<script src="https://d3js.org/d3-selection-multi.v1.js"></script>
 
 	<script>
-		var jsonlist = ["graph.json", "graph1.json"];
+		var jsonlist = ["text.json", "graph22.json"];
 		var dataIndex = jsonlist[0]
 		var colors = d3.scaleOrdinal(d3.schemeCategory10);
 		var svg = d3.select("svg")
@@ -97,7 +97,7 @@
 						})
 						.style("opacity", "0.7")
 						.attr("marker-end", function(d) {
-							return "url(#" + d.type + ")";
+							return "url(#Type" + d.type + ")";
 						});
 
 					//			link.append("title")
@@ -205,7 +205,7 @@
 						.attrs({
 							'class': 'edgelabel',
 							'id': function(d, i) {
-								return 'edgelabel' + d.type
+								return 'edgelabelType' + d.type
 							},
 						});
 
