--- a/src/main/webapp/dagre/editable1.html
+++ b/src/main/webapp/dagre/editable1.html
@@ -9,30 +9,55 @@
 </head>
 
 <body>
-	<div id="svgtitle">
-		<h1>
-			CODE DEMO
-		</h1>
-	</div>
+	<div id="mainContainter" style="margin-left:30px;margin-right:30px">
 
-	<div class="row">
-		<div class="col-md-8">
-			<div id="mountNode"></div>
+		<div class="page-header text-center">
+			<h1>CLDIFF GUI</h1>
 		</div>
-		<div class="col-md-4">
-			<div id="chart">
-				<div class="page-header">
-					<h2>Code Info</h2>
+
+
+		<div class="row">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-4">
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						&nbsp;Commits&nbsp;&nbsp;
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<li><a href="#">Action</a></li>
+						<li><a href="#">Another action</a></li>
+						<li><a href="#">Something else here</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">Separated link</a></li>
+					</ul>
 				</div>
-				<div id="chart1">
-					<textarea id="graph1"></textarea>
+			</div>
+			<div class="col-md-7">
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class="col-md-8">
+				<div id="mountNode"></div>
+			</div>
+			<div class="col-md-4">
+				<div id="chart">
+					<div class="page-header">
+						<h2>Code Info</h2>
+					</div>
+					<div class="alert alert-success" role="alert">...</div>
+					<div id="chart1">
+						<textarea id="graph1"></textarea>
+					</div>
 				</div>
 			</div>
 		</div>
+
+
 	</div>
-
-
-
 
 
 	<script>
@@ -41,11 +66,14 @@
 
 	</script>
 
+	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<script src="https://gw.alipayobjects.com/os/antv/assets/g6/1.2.5/g6.min.js"></script>
 	<script src="https://gw.alipayobjects.com/os/antv/assets/g6-plugins/1.0.1/g6-plugins.min.js"></script>
-	
+
 	<script src="codemirror/lib/codemirror.js"></script>
 	<script src="codemirror/mode/javascript/javascript.js"></script>
 	<script src="codemirror/mode/diff/diff.js"></script>
