--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -6,6 +6,8 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
         <link rel="stylesheet" href="../css/jsplumbtoolkit-defaults.css">
         <link rel="stylesheet" href="../css/main_jsplumb.css">
@@ -15,10 +17,14 @@
     </head>
     <body data-demo-id="flowchart">
 
+    <div class="page-header text-center">
+        <h1>CLDIFF GUI</h1>
+    </div>
 
-        <div class="jtk-demo-main">
+
+        <div class="jtk-demo-main col-md-8">
 			<!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide flowchart-demo jtk-surface jtk-surface-nopan" id="canvas">
+            <div class="jtk-demo-canvas canvas-wide flowchart-demo jtk-surface jtk-surface-nopan " id="canvas">
                 <!--<div class="window jtk-node" id="flowchartWindow1"><strong>1</strong><br/><br/></div>-->
                 <!--<div class="window jtk-node" id="flowchartWindow2"><strong>2</strong><br/><br/></div>-->
                 <!--<div class="window jtk-node" id="flowchartWindow3"><strong>3</strong><br/><br/></div>-->
@@ -26,10 +32,48 @@
             </div>
             <!-- /demo -->
         </div>
+
+        <div class="col-md-4">
+            <div id="chart">
+                <div class="page-header">
+                    <h2>Code Info</h2>
+                </div>
+
+                <div id="rightEditor" style="height: 1000px"></div>
+            </div>
+        </div>
+
+
+        <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
         <script src="init_node.js"></script>
         <script src="../js/jsplumb.js"></script>
         <script src="demo.js"></script>
-        <script src="../js/jquery-1.9.0-min.js"></script>
 
+        <script>
+            /* global jsPlumb, $ */
+            $('.window').resizable({
+                resize: function (event, ui) {
+                    jsPlumb.repaint(ui.helper)
+                }
+            })
+            </script>
+        <script>
+            require.config({ paths: { 'vs': '../node_modules/monaco-editor/dev/vs' }});
+
+            require(['vs/editor/editor.main'], function() {
+                var editor = monaco.editor.create(document.getElementById('rightEditor'), {
+                    value: [
+                        'function x() {',
+                        '\tconsole.log("Hello world!");',
+                        '}'
+                    ].join('\n'),
+                    language: 'javascript',
+                });
+            });
+
+
+    </script>
     </body>
 </html>
